--- a/css/same.css
+++ b/css/same.css
@@ -33,39 +33,39 @@
     --basic_space: -0.2rem;
     }
     
-    body {letter-spacing: var(--basic_space), -0.2rem; font-family: var(--font-family), 'Suit', sans-serif;}
+    body {letter-spacing: var(--basic_space, -0.2rem); font-family: var(--font-family, 'Suit', sans-serif);}
     
     /* container */
     .container_full {width:98%; margin:0 auto;}
-    .container {max-width:var(--container), 1440px; margin:0 auto;}
+    .container {max-width:var(--container, 1440px); margin:0 auto;}
     
     
     /* color */
-    .organic {color:var(--main_color), rgba(63, 66, 47, 1);}
-    .ivory{color:var(--sub_ivory), rgba(250, 245, 238, 1);}
-    .apricot{color:var(--sub_apricot), rgba(214, 139, 48, 1);}
-    .panBlack{color:var(--sub_panBlack), rgba(51, 46, 42, 1);}
+    .organic {color:var(--main_color, rgba(63, 66, 47, 1));}
+    .ivory{color:var(--sub_ivory, rgba(250, 245, 238, 1));}
+    .apricot{color:var(--sub_apricot, rgba(214, 139, 48, 1));}
+    .panBlack{color:var(--sub_panBlack, rgba(51, 46, 42, 1));}
     
     /* basic */
-    .black {color:var(--black), rgba(17, 17, 17, 1);}
-    .gray1 {color:var(--gray_1), rgba(68, 68, 68, 1);}
-    .gray2 {color:var(--gray_2), rgba(69, 69, 69, 1);}
-    .gray3 {color:var(--gray_3), rgba(119, 119, 119, 1);}
-    .gray4 {color:var(--gray_4), rgba(221, 221, 221, 1);}
-    .white {color:var(--white), rgb(255, 255, 255);}
+    .black {color:var(--black, rgba(17, 17, 17, 1));}
+    .gray1 {color:var(--gray_1, rgba(68, 68, 68, 1));}
+    .gray2 {color:var(--gray_2, rgba(69, 69, 69, 1));}
+    .gray3 {color:var(--gray_3, rgba(119, 119, 119, 1));}
+    .gray4 {color:var(--gray_4, rgba(221, 221, 221, 1));}
+    .white {color:var(--white, rgb(255, 255, 255));}
     
     
     /* background */
-    .organic_bg {background:var(--main_color), rgba(63, 66, 47, 1);}
-    .ivory_bg{background:var(--sub_ivory), rgba(250, 245, 238, 1);}
-    .apricot_bg{background:var(--sub_apricot), rgba(214, 139, 48, 1);}
-    .panBlack_bg{background:var(--sub_panBlack), rgba(51, 46, 42, 1);}
+    .organic_bg {background:var(--main_color, rgba(63, 66, 47, 1));}
+    .ivory_bg{background:var(--sub_ivory, rgba(250, 245, 238, 1));}
+    .apricot_bg{background:var(--sub_apricot, rgba(214, 139, 48, 1));}
+    .panBlack_bg{background:var(--sub_panBlack, rgba(51, 46, 42, 1));}
     
     
     /* font */
-    .main_tit {font-size:var(--main_tit), 2.125rem;}
-    .sub_tit {font-size:var(--sub_tit), 1.5rem;}
-    .list_tit {font-size:var(--list_tit), 1.25rem;}
-    .basic_txt {font-size:var(--basic_txt), 1rem;}
-    .point_txt {font-size:var(--point_txt), 0.75rem;}
+    .main_tit {font-size:var(--main_tit, 2.125rem);}
+    .sub_tit {font-size:var(--sub_tit, 1.5rem);}
+    .list_tit {font-size:var(--list_tit, 1.25rem);}
+    .basic_txt {font-size:var(--basic_txt, 1rem);}
+    .point_txt {font-size:var(--point_txt, 0.75rem);}
     
