--- a/css/chaeun.css
+++ b/css/chaeun.css
@@ -1,5 +1,6 @@
-body {
-  font-family: Arial, sans-serif;
+
+.body {
+  font-family: 'SUIT Variable', sans-serif;
   margin: 0;
   padding: 0;
   line-height: 1.6;
@@ -20,30 +21,51 @@ body {
   border-radius: 20px;
   cursor: pointer;
 }
-
+.mainbox{
+  display: flex;
+padding: 80px 0px;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+align-self: stretch;
+}
 .main {
-  padding: 50px 20px;
-  text-align: center;
+  display: flex;
+  width: 1436px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 40px;
 }
 
 .main h1 {
   margin-bottom: 40px;
 }
+.main h2 {
+  color: var(---, var(--Panton-Black-C, #332E2A));
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 40px; /* 166.667% */
+  letter-spacing: -0.48px;
+}
 
-.options {
+.main-container{
   display: flex;
-  justify-content: center;
+  width: 1436px;
+  align-items: center;
   gap: 20px;
 }
 
-.option {
-  border: 1px solid #ddd;
+.wherewhen {
+  display: flex;
+  width: 708px;
+  padding: 40px 30px;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0;
+  gap: auto;
   border-radius: 10px;
-  padding: 20px;
-  width: 300px;
-  text-align: center;
-  background: #f9f9f9;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  background: var(--New-group-Ivory, #FAF5EE);
 }
 
 .option img {
@@ -57,24 +79,40 @@ body {
   color: #fff;
   border: none;
   padding: 10px 20px;
-  border-radius: 20px;
+  border-radius: 214px;
   cursor: pointer;
 }
 
-.footer {
-  background: #f1f1f1;
-  padding: 20px;
-  text-align: center;
-  font-size: 14px;
-  color: #555;
+.notice-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  border-top: 1px solid #DDD;
+  border-bottom: 1px solid #DDD;
+
+}
+.ft-container{
+  display: flex;
+  padding: 40px 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  background: #F6F6F6;
+
+}
+.infobox{
+  display: flex;
+  width: 1436px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 40px;
 }
 
-.footer a {
-  color: #3e3e3e;
-  text-decoration: none;
-  margin: 0 10px;
-}
+#ful1{
+  display: flex;
+  flex-direction: row;
 
-.footer a:hover {
-  text-decoration: underline;
 }
