--- a/css/chaeun.css
+++ b/css/chaeun.css
@@ -1,47 +1,125 @@
 
-.body {
-  font-family: 'SUIT Variable', sans-serif;
+.body, ul, li, div, p, h1, h2, header, footer, button {
+  font-family: 'SUIT', sans-serif;;
+  font-style: normal;
   margin: 0;
   padding: 0;
-  line-height: 1.6;
+}
+li{
+  list-style: none;
+}
+a{
+  text-decoration: none;
 }
 
-.header {
-  background: #3e3e3e;
-  color: #fff;
-  text-align: center;
-  padding: 20px;
-}
+.mdbanner {
 
-.header button {
-  background: #fff;
-  color: #3e3e3e;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 20px;
-  cursor: pointer;
-}
-.mainbox{
+  background-color:#3F422F;
+  padding: 40px;
   display: flex;
-padding: 80px 0px;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.mdbanner img{
+
+  display: flex;
+  opacity: 0.15; 
+  position: absolute;
+}
+
+.mdb_box{
+  display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-align-self: stretch;
+gap: 20px;
+z-index: 1;
 }
-.main {
+
+.mdb_box p{
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
+  font-weight: 600;
+}
+.mdbanner button {
+  color: var(---, var(--Panton-Black-C, #332E2A));
+  font-size: 12px;
+  background: #fff;
   display: flex;
-  width: 1436px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  padding: 15px 50px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.more{
+display: flex;
+padding: 80px;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+
+.more_container {
+  display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 40px;
 }
 
-.main h1 {
-  margin-bottom: 40px;
-}
-.main h2 {
+.more h1 {
   color: var(---, var(--Panton-Black-C, #332E2A));
+  font-size: 34px;
+  font-weight: 800;
+  line-height: 40px; /* 117.647% */
+  letter-spacing: -0.68px;
+}
+
+.more_area{
+  display: flex;
+  width: 1436px;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.more_box{
+  display: flex;
+width: 708px;
+padding: 40px 30px;
+justify-content: space-between;
+border-radius: 10px;
+background: var(--New-group-Ivory, #FAF5EE)
+}
+
+#where.more_box{
+  background: var(--New-group-Ivory,  #F6F6F6)
+}
+
+.more_info{
+  display: flex;
+width: 229px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 60px;
+}
+
+.more_txt_box{
+  display: flex;
+width: 216px;
+flex-direction: column;
+align-items: flex-start;
+gap: 20px;
+}
+
+.more h2 {
+  color: var(---, var(--Panton-Black-C, #332E2A));
+  font-family: SUIT;
   font-size: 24px;
   font-style: normal;
   font-weight: 800;
@@ -49,38 +127,90 @@ align-self: stretch;
   letter-spacing: -0.48px;
 }
 
-.main-container{
-  display: flex;
-  width: 1436px;
-  align-items: center;
-  gap: 20px;
+.more p{
+  color: #777;
+font-family: SUIT;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 18px; /* 112.5% */
+letter-spacing: -0.32px;
 }
 
-.wherewhen {
-  display: flex;
-  width: 708px;
-  padding: 40px 30px;
-  justify-content: space-between;
-  align-items: center;
-  flex-shrink: 0;
-  gap: auto;
-  border-radius: 10px;
+.more img {
+  width: 366px;
+height: 220px;
+flex-shrink: 0;
+border-radius: 10px;
+}
+
+.more button {
   background: var(--New-group-Ivory, #FAF5EE);
-}
-
-.option img {
-  width: 100%;
-  border-radius: 10px;
-  margin-bottom: 15px;
-}
-
-.option button {
-  background: #3e3e3e;
-  color: #fff;
-  border: none;
+  color: #B6996F;
+  font-size: 16px;
+  border: 1px solid #D6C6B0;
   padding: 10px 20px;
   border-radius: 214px;
   cursor: pointer;
+}
+#where button{
+  background: #F6F6F6;
+  color:#777;
+  border: 1px solid #AAA;
+}
+
+.more a{
+  color: #B6996F;
+font-size: 16px;
+letter-spacing: -0.32px;
+}
+.notice{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+border-top: 1px solid #DDD;
+border-bottom: 1px solid #DDD;
+}
+.notice_box{
+  display: flex;
+  width: 1436px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#notice_event{
+  background-color: #fff;
+  color: #777;
+  display: flex;
+  justify-content: flex-start;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+
+#btm_icon{
+  width: 50px;
+height: 50px;
+}
+
+footer{
+display: flex;
+padding: 40px;
+flex-direction: column;
+align-items: center;
+align-self: stretch;
+background: #F6F6F6;
+}
+
+footer p{
+  width: 854px;
+  height: 70px;
+color: #444;
+font-size: 14px;
+font-weight: 500;
+line-height: 30px; 
+letter-spacing: -0.28px;
 }
 
 .notice-container{
@@ -93,17 +223,7 @@ align-self: stretch;
   border-bottom: 1px solid #DDD;
 
 }
-.ft-container{
-  display: flex;
-  padding: 40px 0px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  align-self: stretch;
-  background: #F6F6F6;
-
-}
-.infobox{
+.ft_container{
   display: flex;
   width: 1436px;
   flex-direction: column;
@@ -111,8 +231,77 @@ align-self: stretch;
   gap: 40px;
 }
 
-#ful1{
+.btm_info_box{
   display: flex;
-  flex-direction: row;
+  width: 1436px;
+  flex-direction: column;
+ gap: 30px;
+ padding-bottom: 40px;
+ border-bottom: 1px solid #DDD;
+}
 
+.btm_menu
+{ display: flex;
+  justify-content: space-between;
+}
+.btm_menu_box{
+  color: #000;
+  font-size: 14px;
+  font-weight: 800;
+  justify-content: flex-start;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.sns{
+  display: flex;
+align-items: center;
+gap: 20px;
+
+}
+.sns>li{
+  color: #777;
+font-size: 12px;
+font-weight: 700;
+letter-spacing: -0.24px;
+}
+
+.sns_icon_box{
+display: flex;
+align-items: center;
+gap: 15px;
+}
+
+.btm_btm{
+  display: flex;
+  width: 1436px;
+  justify-content: space-between;
+}
+
+#btm_copy{
+  display: flex;
+flex-direction: column;
+align-items: flex-start;
+gap: 20px;
+color: #444;
+font-size: 14px;
+font-weight: 500;
+letter-spacing: -0.28px;
+}
+.app_down{
+  display: flex;
+align-items: center;
+gap: 12px;
+}
+.app_down>li{
+  color: #777;
+font-size: 12px;
+font-weight: 700;
+letter-spacing: -0.24px;
+}
+.app_icon{
+  display: flex;
+align-items: center;
+gap: 5px;
 }
