--- a/css/same.css
+++ b/css/same.css
@@ -37,7 +37,7 @@
     
     /* container */
     .container_full {width:98%; margin:0 auto; padding:0;}
-    .container {max-width:var(--container, 1440px); margin:0 auto; padding:0;}
+    .container {max-width:var(--container, 1440px); margin:0 auto; padding:0; position:relative;}
     
     
     /* color */
