--- a/css/eunjeong.css
+++ b/css/eunjeong.css
@@ -13,14 +13,26 @@
 .aie{
     align-items: flex-end;
 }
-.container {
+
+#hd {
+    width: 1920px;
+    height: 72px;
+    background-color: white;
     position: relative;
+    z-index: 10;          
+}
+
+.container {
+    max-width: 1799px; 
+    margin: 0 auto;
     padding: 20px 0px;
 }
+
 #gnb a {
     color: black; 
     text-decoration: none;
     transition: color 0.3s ease;
+    height: 32;
     text-size-adjust: 16px; 
     padding: 10px;
 }
@@ -46,27 +58,145 @@
     width: 20px;
     height: 20px;}
     a{
+        gap: 5px;
         text-decoration: none; 
         color:#3F422F;
         margin-top: 10px;
     }
-.maintop{
-    width: 1280px;
+
+.video-container {
+    position: relative;
+    max-width: 100%; 
+    height: 870px; 
+    margin: 0 auto; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border-radius:10px;
+    z-index:-1;
+ }
+
+.video-bg {
+    position: absolute;
+    width: 1798px;
+    height: 870px;
+    top: 50%;
+    border-radius:10px;
+    transform: translateY(-50%);
+    z-index:-1;
+    clip-path: inset(0 round 10px);
+}
+
+.search-box,
+.search-container {
+        z-index: 20;}
+
+.search-box{
+    position: absolute;
+    width: 1435px;
+    height: 80px;
+    justify-content: center;
+    align-content: center;
+    z-index: 20;
+    top: 72px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+}
+.search-box svg {
+    display: flex;
+    width: 1435px;
+    height: 80px;
+    justify-content: center; 
+    align-items: center;
+}
+    
+.search-container{
+    position: absolute;
+    width: 1435px;
+    height: 68px;
+    gap: 21px;
+    justify-content: center;
+    align-items: flex-end;
+    left: 50%; 
+    top: 72px;
+    transform: translateX(-50%);
+    z-index: 20; 
+    
 }
 .topwhere{
     display: flex;
     width: 278px;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     gap: 10px;
+    line-height: 16px;
+  
 }
 .topwhen{
     display: flex;
     width: 278px;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     gap: 10px;
+    line-height: 16px;
 }
+
+.topwhere .topwhere{
+    margin: 0 10px;
+}
+
 .textnowrap{
     padding: 10px;
+}
+ 
+.search-container button{
+    gap: 10px; 
+    width: 278px;
+    padding: 10px 0px 10px 20px;
+    border: 1px solid #DDD;
+    border-radius: 50px;
+    background-color: white; 
+    font-size: 14px;
+    line-height: 14px; 
+    font-weight: 600;
+    letter-spacing: -0.28px;
+    color: #777;
+}
+.search-container button svg{
+    width: 23px;
+    height: 23px;
+    flex-shrink: 0;
+    margin-right: 10px;
+}
+.search-container .close-btn{
+    position: absolute;
+    top: 0;
+    right: 40px;
+    background: none;
+    border: none;
+    width: 20px;  
+    height: 20px;
+ }  
+ .search-container .close-btn svg {
+    position: absolute;
+    top: 0;
+    right: 40px;
+    background: none;
+    height: 20px;
+    display: block;}
+
+.search-container .search-btn {
+    width: 101px;
+    height: 40px;
+    padding: 15px 40px;
+    background-color: #3F422F;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 50px;
+    line-height: normal;
+    white-space: nowrap;
+    align-self: flex-end;
 }
