--- a/css/eunjeong.css
+++ b/css/eunjeong.css
@@ -22,8 +22,7 @@
     z-index: 10;          
 }
 
-.container {
-    max-width: 1799px; 
+#hd .container { 
     margin: 0 auto;
     padding: 20px 0px;
 }
