--- a/css/same.css
+++ b/css/same.css
@@ -1,6 +1,7 @@
 :root{
     /* container */
     --container:1440px;
+    --container_full:1800px;
     
     
     /* Color styles */
@@ -36,7 +37,7 @@
     body {letter-spacing: var(--basic_space, -0.1rem); font-family: var(--font-family, 'Suit', sans-serif);}
     
     /* container */
-    .container_full {width:98%; margin:0 auto; padding:0;}
+    .container_full {max-width:var(--container_full, 1800px); margin:0 auto; padding:0;}
     .container {max-width:var(--container, 1440px); margin:0 auto; padding:0; position:relative;}
     
     
@@ -68,4 +69,3 @@
     .list_tit {font-size:var(--list_tit, 1.25rem);}
     .basic_txt {font-size:var(--basic_txt, 1rem);}
     .point_txt {font-size:var(--point_txt, 0.75rem);}
-    
