--- a/css/eunjeong.css
+++ b/css/eunjeong.css
@@ -14,6 +14,7 @@
     align-items: flex-end;
 }
 
+
 #hd {
     width: 1920px;
     height: 72px;
@@ -26,6 +27,11 @@
     margin: 0 auto;
     padding: 20px 0px;
 }
+
+#hd ul {
+    width:0;
+}
+
 
 #gnb a {
     color: black; 
@@ -51,6 +57,7 @@
     gap: 5px; 
     padding-top: 20px; 
     padding-right:20px;
+    justify-content: flex-end;
     
     }   
 .util svg {
