--- a/css/jaeeun.css
+++ b/css/jaeeun.css
@@ -1,30 +1,17 @@
-
-header#hd h1{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 34px;
-}
-header#hd h1{
-    margin: 0;
-}
-header#hd ul{
-    display: flex;
-    justify-content: flex-start;
-    padding-left: 0;
-    margin: 0;
-}
 .bg-orange{
     background-color: #d68b30;
 }
 .bg-beige{
     background-color: #faf5ee;
 }
-.container{
-    width: 1920px;
-    margin: 0 auto;
+.c-w{
+    color: white;
+}
+.c-p{
+    color: #332e2a;
+}
+.c-a{
+    color: #d68b30;
 }
 .d-flex{
     display: flex;
@@ -41,58 +28,161 @@ header#hd ul{
 .ais{
     align-items: start;
 }
-.h100{
-    height: 100px;
+.h636{
+    height: 636px;
 }
-.h200{
-    height: 200px;
-}
-.h300{
-    height:300px;
-}
-.h747{
-    height: 747px;
-}
-.h610{
-    height: 610px;
+.h576{
+    height: 576px;
 }
 .h441{
     height: 441px;
 }
-.h361{
-    height: 361px;
+.h436{
+    height: 436px;
+}
+.h376{
+    height: 376px;
+}
+.h371{
+    height: 371px;
+}
+.h311{
+    height: 311px;
 }
 .h155{
     height: 155px;
 }
-.w1460{
-    width: 1460px;
+.h75{
+    height: 75px;
 }
-.w1450{
-    width: 1450px;
+.h25{
+    height: 25px;
+}
+.w1920{
+    width: 1920px;
+}
+.w1434{
+    width: 1434px;
+}
+.w1435{
+    width: 1435px;
+}
+.w1194{
+    width: 1194px;
+}
+.w1193{
+    width: 1193px;
 }
 .w1090{
     width: 1090px;
 }
+.w384{
+    width: 384px;
+}
 .w4{
     width: 25%;
+    border-radius: 10px;
+}
+.w3{
+    width: 33.333%;
+    border-radius: 10px;
 }
 
-#hd > ul > li{
-    margin: 0 15px;
+#img1{
+    background-image: url(../img/image/image1.jpg);
+    width: 284px;
+    height: 200px;
+    
+}
+#img2{
+    background-image: url(../img/image/image2.jpg);
+    width: 284px;
+    height: 200px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+#img3{
+    background-image: url(../img/image/image3.jpg);
+    width: 284px;
+    height: 200px;
+    margin-right: 20px;
+}
+#img4{
+    background-image: url(../img/image/image4.jpg);
+    width: 284px;
+    height: 200px;
+    
+}
+#img5{
+    background-image: url(../img/image/image5.jpg);
+    width: 384px;
+    height: 260px;
+}
+#img6{
+    background-image: url(../img/image/image6.jpg);
+    width: 384px;
+    height: 260px;
+    margin-right: 20px;
+    margin-left: 20px;
+}#img7{
+    background-image: url(../img/image/image7.jpg);
+    width: 384px;
+    height: 260px;
+}
+
+#onebanner {
     position: relative;
 }
-
-#hd ul ul{
-position:absolute;
-   left: 0; top: 100%;
-   min-width: 120px;
-   display: none;
+#onebanner::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left:0;
+    top:0;
+    background: url(../img/image/banner.jpg) no-repeat;
+    opacity: 0.35;
+    z-index: 0;
 }
 
-#hd > ul > li:hover ul{
-    display: block;
+#onebanner .list_tit {
+    position: relative;
+    z-index: 1;
 }
-.reserve-link{
-    color: #d68b30;
+
+.button1{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-right: 60px;
+}.button2{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 60px;
+}
+.button3{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-right: 61px;
+}
+.button4{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-left: 61px;
+}
+.button7{
+    display: flex;
+    flex-direction: column; /* 요소들을 세로로 배치 */
+    justify-content: space-between;
+    border-radius: 50%;
+    width: 206px;
+    height: 40px;
+    background-color: white;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
