--- a/css/yena.css
+++ b/css/yena.css
@@ -1,270 +1,251 @@
-/* same */
-.p100 {
-    padding: 6.25rem 0;
-}
-
-.bgGray {
-    background:#F6F6F6;
-}
-
+@charset "UTF-8";
+/* 기본 스타일 */
 .main_tit {
-    font-size:2.125rem;
-    font-weight: 800;
-    padding-bottom:2.5rem;
-    line-height:1.3;
+  font-size: 2.125rem;
+  font-weight: 800;
+  padding-bottom: 2.5rem;
+  line-height: 1.3;
 }
 
 .basic_txt {
-    line-height:2;
+  line-height: 2;
 }
 
+/* YouTube 컨테이너 */
 .youtube-container {
-    position:relative;
-    height:0;
-    padding-bottom:56.25%;
-    border-radius:10px;
-    overflow: hidden;
+  position: relative;
+  height: 0;
+  padding-bottom: 56.25%;
+  border-radius: 10px;
+  overflow: hidden;
 }
-  
 .youtube-container iframe {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-
-
-/* hotspot */
+/* 핫스팟 관련 스타일 */
 .hotspot .main_tit {
-    text-align: center;
+  text-align: center;
 }
-
-.conSwiper1 {
-    height:405px;
+.hotspot .conSwiper1 {
+  height: 405px;
 }
-
+.hotspot .custom-focus-style {
+  transform: scale(1.1); /* 살짝 확대 */
+  opacity: 1; /* 강조 */
+  z-index: 10; /* 다른 슬라이드 위에 배치 */
+  transition: all 0.3s ease-in-out;
+}
+.hotspot .swiper-container {
+  padding: 0;
+}
 .hotspot .swiper-slide {
-    display: flex;
-    justify-content: center;
-    border-radius:0.625rem;
-    overflow: hidden;
-    max-width:16.45rem;
-    max-height:20.625rem;
-    /* margin-left:0.5rem; */
-    margin-right:1.5rem;
-    position: relative;
-    transition: all 0.4s ease-in-out;
+  display: flex;
+  justify-content: center;
+  border-radius: 0.625rem;
+  overflow: hidden;
+  max-width: 16.35rem;
+  max-height: 20.625rem;
+  margin-right: 1.5rem;
+  position: relative;
+  transition: all 0.4s ease-in-out;
+  box-sizing: border-box;
 }
-
-.hotspot .swiper-slide:after {
-    position:absolute;
-    content:'';
-    width:100%;
-    height:100%;
-    background:rgba(0, 0, 0, 0.5);
-    margin:auto;
+.hotspot .swiper-slide::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  margin: auto;
 }
-
 .hotspot .swiper-slide-active {
-    max-width: 18rem;
-    max-height: 25rem;
-    height:140%;
-    transition: all 0.4s ease-in-out;
-    overflow: hidden;
+  max-width: 18rem;
+  max-height: 25rem;
+  height: 140%;
+  transition: all 0.4s ease-in-out;
+  overflow: hidden;
+  box-sizing: border-box;
 }
-
-.hotspot .swiper-slide-active:after {
-    height:50%;
-    bottom:0;
-    background: linear-gradient(0deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0) 100%);
+.hotspot .swiper-slide-active::after {
+  height: 50%;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
 }
-
-.hotspot .swiper-slide-active .basic_txt,
-.hotspot .swiper-slide-active .sub_tit {
-    display: flex;
+.hotspot .swiper-slide-active .basic_txt, .hotspot .swiper-slide-active .sub_tit {
+  display: flex;
 }
-
-.hotspot .swiper-slide img {
-    width:100%;
-    height:100%;
-    object-fit: cover;
-    transition: transform 0.4s ease-in-out;
-}
-
 .hotspot .swiper-slide-active img {
-    transform: scale(1.05); /* 자연스럽게 확대 */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.4s ease-in-out;
 }
-
-.hotspot .hotplace_txt {
-    position: absolute;
-    bottom: 1.875rem;
-    left: 1.875rem;
-    z-index: 1;
-    opacity: 0;
-    transform: translateY(30px);
-    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+.hotspot .swiper-slide-active img.active {
+  transform: scale(1.05);
 }
-
 .hotspot .swiper-slide-active .hotplace_txt {
-    opacity: 1;
-    transform: translateY(0);
+  opacity: 1;
+  transform: translateY(0);
 }
-
+.hotspot .hotplace_txt {
+  position: absolute;
+  bottom: 1.875rem;
+  left: 1.875rem;
+  z-index: 1;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
 .hotspot .sub_tit {
-    line-height:1.3;
-    font-weight:700;
-    padding-bottom:1.25rem;
-    text-shadow: 0px 0px 10px #000;
-    display:none;
+  line-height: 1.3;
+  font-weight: 700;
+  padding-bottom: 1.25rem;
+  text-shadow: 0px 0px 10px #000;
+  display: none;
 }
-
 .hotspot .basic_txt {
-    display:none;
+  display: none;
 }
-
-.hotspot .hotspot-button-next,
-.hotspot .hotspot-button-prev {
-    width: 2.25rem;
-    height: 2.25rem;
-    border-radius: 0.625rem;
-    position: static;
+.hotspot .hotspot-button-next, .hotspot .hotspot-button-prev {
+  width: 2.25rem;
+  height: 2.25rem;
+  border-radius: 0.625rem;
+  position: static;
 }
-
 .hotspot .hotspot-button-next {
-    background: url('../img/icon/arrow_right.svg') no-repeat;
-    background-position: center;
-    background-size: cover;
+  background: url("../img/icon/arrow_right.svg") no-repeat;
+  background-position: center;
+  background-size: cover;
 }
-
 .hotspot .hotspot-button-prev {
-    background: url('../img/icon/arrow_left.svg') no-repeat;
-    background-position: center;
-    background-size: cover;
-    margin-right: 0.313rem;
+  background: url("../img/icon/arrow_left.svg") no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-right: 0.313rem;
 }
-  
-.hotspot .hotspot-button-next::after,
-.hotspot .hotspot-button-prev::after {
-    display: none;
+.hotspot .hotspot-button-next::after, .hotspot .hotspot-button-prev::after {
+  display: none;
 }
-
 .hotspot .hotspot_btns {
-    position:absolute;
-    display: inline-flex;
-    justify-content: center;
-    left:155px;
-    right:0;
-    bottom:1.875rem;
-    z-index: 1;
+  position: absolute;
+  display: inline-flex;
+  justify-content: center;
+  left: 155px;
+  right: 0;
+  bottom: 1.875rem;
+  z-index: 1;
 }
 
-
-
-/* magazin */
+/* 매거진 관련 스타일 */
 .magazin .point_txt {
-    padding-bottom:0.625rem;
+  padding-bottom: 0.625rem;
 }
-.magazin_txt {
-    width:100%;
-    max-width:15rem;
+.magazin .magazin_txt {
+  width: 100%;
+  max-width: 15rem;
+  position: relative;
+  overflow: hidden;
 }
-
+.magazin .magazin_txt .magazin_btns {
+  padding-top: 5rem;
+}
+.magazin .magazin_txt .swiper-slide {
+  opacity: 0;
+  transform: translateY(50px); /* 슬라이드가 아래에서 시작하도록 설정 */
+  transition: opacity 0.5s ease 0.2s, transform 1s ease 0.2s; /* 애니메이션 효과 설정 */
+}
+.magazin .magazin_txt .swiper-slide-active {
+  opacity: 1;
+  transform: translateY(0); /* 원래 위치로 애니메이션 */
+}
+.magazin .magazin_txt .swiper-slide .swiper-slide-prev {
+  opacity: 0;
+}
+.magazin .magazin_txt .swiper-slide .swiper-slide-next {
+  opacity: 0;
+}
+.magazin .magazin_box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .magazin .gallery-top {
-    width:100%;
-    max-width:21.25rem;
+  width: 100%;
+  max-width: 21.25rem;
 }
-
 .magazin .gallery-thumbs {
-    width:100%;
-    max-width:36.25rem;
+  width: 100%;
+  max-width: 36.25rem;
 }
-
 .magazin .gallery-thumbs, .magazin .gallery-top {
-    overflow: hidden;
-    border-radius:10px;
+  overflow: hidden;
+  border-radius: 10px;
 }
-
-.magazin .magazin_btns {
-   padding-top:6.25rem;
+.magazin .magazin-button-next, .magazin .magazin-button-prev {
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 0.625rem;
+  position: static;
 }
-
-.magazin .magazin-button-next,
-.magazin .magazin-button-prev {
-    width: 2.5rem;
-    height: 2.5rem;
-    border-radius: 0.625rem;
-    position: static;
-}
-
 .magazin .magazin-button-next {
-    background: url('../img/icon/arrow_right.svg') no-repeat;
-    background-position: center;
-    background-size: cover;
+  background: url("../img/icon/arrow_right.svg") no-repeat;
+  background-position: center;
+  background-size: cover;
 }
-
 .magazin .magazin-button-prev {
-    background: url('../img/icon/arrow_left.svg') no-repeat;
-    background-position: center;
-    background-size: cover;
-    margin-right: 0.313rem;
+  background: url("../img/icon/arrow_left.svg") no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-right: 0.313rem;
 }
-  
-.magazin .magazin-button-next::after,
-.magazin .magazin-button-prev::after {
-    display: none;
+.magazin .magazin-button-next::after, .magazin .magazin-button-prev::after {
+  display: none;
 }
 
-
-
-/* youtube */
+/* YouTube 관련 스타일 */
 .youtube .container {
-    padding:0 6rem;
+  padding: 0 6rem;
 }
-
-.youtube .main_tit{
-    text-align:center;
+.youtube .main_tit {
+  text-align: center;
 }
-
-.youtube .basic_txt{
-    padding-top:0.625rem;
+.youtube .basic_txt {
+  padding-top: 0.625rem;
 }
-
 .youtube .swiper-slide {
-    width:23.5%;
-    margin-right:2%;
+  width: 23.5%;
+  margin-right: 2%;
 }
-.youtube .swiper-slide:last-child{
-    margin-right:0;
+.youtube .swiper-slide:last-child {
+  margin-right: 0;
 }
-
-.youtube .youtube-button-next,
-.youtube .youtube-button-prev {
-    width: 3.75rem;
-    height: 3.75rem;
-    border-radius: 0.625rem;
-    position:absolute;
-    top:50%;
+.youtube .youtube-button-next, .youtube .youtube-button-prev {
+  width: 3.75rem;
+  height: 3.75rem;
+  border-radius: 0.625rem;
+  position: absolute;
+  top: 50%;
 }
-
 .youtube .youtube-button-next {
-    background: url('../img/icon/arrow_right.svg') no-repeat;
-    background-position: center;
-    background-size: cover;
-    right:0;
+  background: url("../img/icon/arrow_right.svg") no-repeat;
+  background-position: center;
+  background-size: cover;
+  right: 0;
 }
-
 .youtube .youtube-button-prev {
-    background: url('../img/icon/arrow_left.svg') no-repeat;
-    background-position: center;
-    background-size: cover;
-    margin-right: 0.313rem;
-    left:0;
-    
+  background: url("../img/icon/arrow_left.svg") no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-right: 0.313rem;
+  left: 0;
 }
-  
-.youtube .youtube-button-next::after,
-.youtube .youtube-button-prev::after {
-    display: none;
+.youtube .youtube-button-next::after, .youtube .youtube-button-prev::after {
+  display: none;
 }
