--- a/css/eunjeong.css
+++ b/css/eunjeong.css
@@ -215,6 +215,7 @@ a {
     font-weight: 500;
     text-align: center;
     flex-direction: column;
+    border-top: none;
 }
 
 .quick-btn:first-child {
