--- a/css/same.css
+++ b/css/same.css
@@ -26,7 +26,7 @@ body {
   font-family: var(--font-family, "Suit", sans-serif);
 }
 
-dl, ol, ul {
+div, dl, ol, ul, li, h1, h2, h3, h4, h5, h6, p {
   padding: 0;
   margin: 0;
 }
